--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width" />
 	
-	<title>Event Calendar</title>
+	<title>Event Calendar Demo Page</title>
 	<link rel="shortcut icon" href="images/favicon.ico" />
 	
 	<!-- Included CSS Files -->
@@ -16,26 +16,176 @@
 	<!--<script src="js/jquery.js" type="text/javascript"></script>-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	
-	<script src="js/jquery.eventCalendar.js" type="text/javascript"></script>
 </head>
 <body>
-	<h1 class="">
-		Event Calendar.
+	<h1>
+		Event Calendar Demo Page
 	</h1>
 	<p>
 		jQuery plugin to show calendar's events in a very confortable way.
 	</p>
-				
-	<div id="eventCalendarWrap"></div>
-
-<script type="text/javascript">  
-	$(document).ready(function() {  
-		$("#eventCalendarWrap").eventCalendar({
-			eventsjson: 'events.json.php',
-			cacheJson: true	// if true plugin get a json only first time and after plugin filter events
-							// if false plugin get a new json on each date change
-		});  
-	});  
-</script> 
+	<p>
+		Main features:
+	</p>
+	<ul>
+		<li><strong>Fluid Calendar</strong>: You can show calendar in almost any width</li>
+		<li><strong>Change Style as you like</strong>: You can edit the .css file to restyle</li>
+		<li><strong>Light</strong>: Less than 8kb of Javascript(minified)</li>
+		<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can use it also with frameworks like Zepto.js</li>
+		<li><strong>Highly customizable</strong>: Yoc can change almost everything. Look following examples</li>
+	</ul>
 	
-<?php include("includes/footer.php"); ?>	
+	<ul id="DemoList">
+		<li class="fl">
+			<h2>Default Demo</h2>
+			<p>Example of jQuery Events Calendar with default parameters</p>
+			<div id="eventCalendarDefault"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarDefault").eventCalendar({
+						eventsjson: 'events.json.php' // link to events json
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl">
+			<h2>No cache</h2>
+			<p>There is only one call to json file, so it has to contains all events. After that the plugin will filter results</p>
+			<div id="eventCalendarNoCache"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarNoCache").eventCalendar({
+						eventsjson: 'events.json.php',
+						cacheJson: false
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl cb">
+			<h2>inline json</h2>
+			<p>We send the json file directly to the plugin (no ajax call to get the events).</p>
+			<div id="eventCalendarInline"></div>
+			<script>  
+				$(document).ready(function() {  
+					var eventsInline = [{ "date": "1337594400000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1337677200000", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" }];
+				
+					$("#eventCalendarInline").eventCalendar({
+						jsonData: eventsInline
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl">
+			<h2>Localization</h2>
+			<p>We have total control about the language of the plugin</p>
+			<div id="eventCalendarLocale"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarLocale").eventCalendar({
+						eventsjson: 'events.json.php',
+						monthNames: [ "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio",
+							"Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre" ],
+						dayNames: [ 'Domingo','Lunes','Martes','Miércoles',
+							'Jueves','Viernes','Sabado' ],
+						dayNamesShort: [ 'Dom','Lun','Mar','Mie', 'Jue','Vie','Sab' ],		
+						txt_noEvents: "No hay eventos para este periodo",
+						txt_SpecificEvents_prev: "",
+						txt_SpecificEvents_after: "eventos:",
+						txt_next: "siguiente",
+						txt_prev: "anterior",
+						txt_NextEvents: "Próximos eventos:"
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl">
+			<h2>Limit Results</h2>
+			<p>It is possible to limit the events to show. If we click on a day results will not be filtered</p>
+			<div id="eventCalendarLimit"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarLimit").eventCalendar({
+						eventsjson: 'events.json.php',
+						eventsLimit: 2
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl cb">
+			<h2>Calendar display</h2>
+			<p>You can show month days in a single line to make calendar widget smaller</p>
+			<div id="eventCalendarCalendarLine"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarCalendarLine").eventCalendar({
+						eventsjson: 'events.json.php',
+						showDayAsWeeks: false
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl">
+			<h2>Start week on Sumnday</h2>
+			<p>Also you can customize the day when the week starts</p>
+			<div id="eventCalendarCalendarSunday"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarCalendarSunday").eventCalendar({
+						eventsjson: 'events.json.php',
+						startWeekOnMonday: false
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl">
+			<h2>Hide week days</h2>
+			<p>Hide the day names in the calendar view</p>
+			<div id="eventCalendarWeekDays"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarWeekDays").eventCalendar({
+						eventsjson: 'events.json.php',
+						showDayNameInCalendar: false
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl cb">
+			<h2>Show Events description</h2>
+			<p>Events description is hide by default (you can show it clicking on the event title), but if you want they can be visible always </p>
+			<div id="eventCalendarShowDescription"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarShowDescription").eventCalendar({
+						eventsjson: 'events.json.php',
+						showDescription: true,
+					});  
+				});  
+			</script> 
+		</li>
+		<li class="fl">
+			<h2>Animation Speed</h2>
+			<p>Also you can customize the speed and the opacity of the widget animation</p>
+			<div id="eventCalendarAnimation"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarAnimation").eventCalendar({
+						eventsjson: 'events.json.php',
+						moveSpeed: 2000,
+						moveOpacity: 1
+					});  
+				});  
+			</script> 
+		</li>
+		
+		
+		
+		
+	</ul>
+	<div class="cb"></div>
+</body>	
+
+<!--script src="js/jquery.timeago.js" type="text/javascript"></script-->
+<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>
+
+</html>
