--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width" />
 	
-	<title>Event Calendar Demo Page</title>
+	<title>jQuery Event Calendar Demo Page</title>
 	<link rel="shortcut icon" href="images/favicon.ico" />
 	
 	<!-- Included CSS Files -->
@@ -18,28 +18,50 @@
 	
 </head>
 <body>
+	<div id="paradigmaBox" class="poweredBy">
+		<img src="img/paradigmaLogo.png" />
+		<div class="data">
+			<a href="http://www.paradigmatecnologico.com" target="_blank" class="name">Paradigma Tecnológico</a>
+			<a href="http://twitter.com/#!/paradigmate" target="_blank" class="twitter">@paradigmate</a>
+		</div>
+	</div>
+	<div id="vissitBox" class="poweredBy">
+		<img src="img/jaime.png" />
+		<div class="data">
+			<a href="http://www.vissit.com" target="_blank" class="name">Jaime Fernández</a>
+			<a href="http://twitter.com/#!/vissit" target="_blank" class="twitter">@vissit</a>
+		</div>
+	</div>
+	<div class="cb"></div>
+	<hr />
+	<img src="img/eventsCalendarIcon_250.png" id="appLogo" class="fl"/>
 	<h1>
-		Event Calendar Demo Page
+		jQuery Event Calendar Demo Page
 	</h1>
 	<p>
-		jQuery plugin to show calendar's events in a very confortable way.
+		jQuery plugin to show events in a calendar in a very confortable way
 	</p>
 	<p>
 		Main features:
 	</p>
-	<ul>
+	<ul class="features">
 		<li><strong>Fluid Calendar</strong>: You can show calendar in almost any width</li>
 		<li><strong>Change Style as you like</strong>: You can edit the .css file to restyle</li>
 		<li><strong>Light</strong>: Less than 8kb of Javascript(minified)</li>
-		<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can use it also with frameworks like Zepto.js</li>
-		<li><strong>Highly customizable</strong>: Yoc can change almost everything. Look following examples</li>
+		<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can also use it with frameworks like Zepto.js</li>
+		<li><strong>Highly customizable</strong>: You can change almost everything. Look at the following examples</li>
 	</ul>
 	
-	<ul id="DemoList">
-		<li class="fl">
+	<ul id="DemoList" class="cb">
+		<li class="fl thin">
 			<h2>Default Demo</h2>
-			<p>Example of jQuery Events Calendar with default parameters</p>
+			<p class="demoDesc">Example of jQuery Events Calendar with default parameters</p>
 			<div id="eventCalendarDefault"></div>
+			<pre>$(id).eventCalendar({
+  // link to events json
+  eventsjson: 'file.json' 
+});</pre>
+			
 			<script>  
 				$(document).ready(function() {  
 					$("#eventCalendarDefault").eventCalendar({
@@ -48,9 +70,9 @@
 				});  
 			</script> 
 		</li>
-		<li class="fl">
+		<li class="fl wide">
 			<h2>No cache</h2>
-			<p>There is only one call to json file, so it has to contains all events. After that the plugin will filter results</p>
+			<p class="demoDesc">The plugin only calls once to the json file, so it has to contain all events. After that call, the plugin will filter the results</p>
 			<div id="eventCalendarNoCache"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -59,11 +81,15 @@
 						cacheJson: false
 					});  
 				});  
-			</script> 
+			</script>
+<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  cacheJson: false
+}); </pre>			
 		</li>
 		<li class="fl cb">
 			<h2>inline json</h2>
-			<p>We send the json file directly to the plugin (no ajax call to get the events).</p>
+			<p class="demoDesc">The json is written directly inside the plugin function via javaScript (no ajax call to get the events).</p>
 			<div id="eventCalendarInline"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -73,11 +99,15 @@
 						jsonData: eventsInline
 					});  
 				});  
-			</script> 
+			</script>
+<pre>var eventsInline = [{ json }];
+$(id).eventCalendar({
+  jsonData: eventsInline
+}); </pre>				
 		</li>
 		<li class="fl">
 			<h2>Localization</h2>
-			<p>We have total control about the language of the plugin</p>
+			<p class="demoDesc">We have total control about the language of the plugin</p>
 			<div id="eventCalendarLocale"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -97,10 +127,24 @@
 					});  
 				});  
 			</script> 
+<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  monthNames: [ "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio",
+    "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre" ],
+  dayNames: [ 'Domingo','Lunes','Martes','Miércoles',
+    'Jueves','Viernes','Sabado' ],
+  dayNamesShort: [ 'Dom','Lun','Mar','Mie', 'Jue','Vie','Sab' ],		
+  txt_noEvents: "No hay eventos para este periodo",
+  txt_SpecificEvents_prev: "",
+  txt_SpecificEvents_after: "eventos:",
+  txt_next: "siguiente",
+  txt_prev: "anterior",
+  txt_NextEvents: "Próximos eventos:"
+}); </pre>	
 		</li>
 		<li class="fl">
 			<h2>Limit Results</h2>
-			<p>It is possible to limit the events to show. If we click on a day results will not be filtered</p>
+			<p class="demoDesc">It is possible to limit the number of events to show. But if we click on a day, results will not be filtered</p>
 			<div id="eventCalendarLimit"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -110,10 +154,14 @@
 					});  
 				});  
 			</script> 
+<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  eventsLimit: 2
+}); </pre>				
 		</li>
 		<li class="fl cb">
 			<h2>Calendar display</h2>
-			<p>You can show month days in a single line to make calendar widget smaller</p>
+			<p class="demoDesc">You can show all the days in a single line to make calendar widget smaller</p>
 			<div id="eventCalendarCalendarLine"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -123,10 +171,14 @@
 					});  
 				});  
 			</script> 
+<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  showDayAsWeeks: false
+});</pre>					
 		</li>
 		<li class="fl">
-			<h2>Start week on Sumnday</h2>
-			<p>Also you can customize the day when the week starts</p>
+			<h2>Start week on Sunday</h2>
+			<p class="demoDesc">Also you can customize the day when the week starts</p>
 			<div id="eventCalendarCalendarSunday"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -136,10 +188,14 @@
 					});  
 				});  
 			</script> 
+<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  startWeekOnMonday: false
+});</pre>				
 		</li>
 		<li class="fl">
 			<h2>Hide week days</h2>
-			<p>Hide the day names in the calendar view</p>
+			<p class="demoDesc">Hide the day names in the calendar view</p>
 			<div id="eventCalendarWeekDays"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -148,24 +204,32 @@
 						showDayNameInCalendar: false
 					});  
 				});  
-			</script> 
+			</script>
+			<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  showDayNameInCalendar: false
+});</pre>		
 		</li>
 		<li class="fl cb">
 			<h2>Show Events description</h2>
-			<p>Events description is hide by default (you can show it clicking on the event title), but if you want they can be visible always </p>
+			<p class="demoDesc">Events description is hide by default (you can show it clicking on the event title), but if you want they can be always visible.</p>
 			<div id="eventCalendarShowDescription"></div>
 			<script>  
 				$(document).ready(function() {  
 					$("#eventCalendarShowDescription").eventCalendar({
 						eventsjson: 'events.json.php',
-						showDescription: true,
+						showDescription: true
 					});  
 				});  
 			</script> 
+			<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  showDescription: true
+});</pre>	
 		</li>
 		<li class="fl">
 			<h2>Animation Speed</h2>
-			<p>Also you can customize the speed and the opacity of the widget animation</p>
+			<p class="demoDesc">Also you can customize the speed and the opacity of the widget animation</p>
 			<div id="eventCalendarAnimation"></div>
 			<script>  
 				$(document).ready(function() {  
@@ -176,16 +240,59 @@
 					});  
 				});  
 			</script> 
+			<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  moveSpeed: 2000,
+  moveOpacity: 1
+});</pre>	
 		</li>
-		
+		<li class="fl">
+			<h2>Events Scrollable</h2>
+			<p class="demoDesc">It is possible to add a Scroll panel for the events list to avoid panel resize on date changes</p>
+			<div id="eventCalendarScroll"></div>
+			<script>  
+				$(document).ready(function() {  
+					$("#eventCalendarScroll").eventCalendar({
+						eventsjson: 'events.json.php',
+						eventsScrollable: true
+					});  
+				});  
+			</script>
+<pre>$(id).eventCalendar({
+  eventsjson: 'file.json',
+  eventsScrollable: true
+});</pre>				
+		</li>
 		
 		
 		
 	</ul>
 	<div class="cb"></div>
+	<hr />
+	<p>
+		Special thanks to:
+	</p>
+	<ul>
+		<li>
+			<strong>Nerea Navarro</strong> <a href="http://twitter.com/#!/nereaestonta">@nereaestonta</a> - Translation & Testing
+		</li>
+		
+		<li>
+			<strong>Juan Francisco del Río</strong> <a href="http://twitter.com/#!/juanriopacheco">@juanriopacheco</a> - Javascript Knowledge
+		</li>
+		<li>
+			<strong>Luis Calvo</strong> <a href="http://twitter.com/#!/LuisCalvoDiaz">@LuisCalvoDiaz</a> - Testing
+		</li>
+		<li>
+			<strong>David Montalvo</strong> <a href="http://twitter.com/#!/davidmontalvo">@davidmontalvo</a> - Testing
+		</li>
+	</ul>
+	
+	
 </body>	
 
 <!--script src="js/jquery.timeago.js" type="text/javascript"></script-->
-<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>
+<!--<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>-->
+<script src="js/jquery.eventCalendar.js" type="text/javascript"></script>
 
 </html>
