--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		Main features:
 	</p>
 	<ul class="features">
-		<li><strong>Fluid Calendar</strong>: You can show calendar in almost any width</li>
+		<li><strong>Fluid Calendar</strong>: calendar will be shown with the width of its parent. Size is recalculated on window resize. <a href="responsive.html">See responsive demo page</a></li>
 		<li><strong>Change Style as you like</strong>: You can edit the .css file to restyle</li>
 		<li><strong>Light</strong>: Less than 8kb of Javascript(minified)</li>
 		<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can also use it with frameworks like Zepto.js</li>
@@ -124,6 +124,7 @@ $(id).eventCalendar({
 						txt_next: "siguiente",
 						txt_prev: "anterior",
 						txt_NextEvents: "Próximos eventos:"
+						txt_GoToEventUrl: "Ir al evento",
 					});  
 				});  
 			</script> 
@@ -139,7 +140,8 @@ $(id).eventCalendar({
   txt_SpecificEvents_after: "eventos:",
   txt_next: "siguiente",
   txt_prev: "anterior",
-  txt_NextEvents: "Próximos eventos:"
+  txt_NextEvents: "Próximos eventos:",
+  txt_GoToEventUrl: "Ir al evento",
 }); </pre>	
 		</li>
 		<li class="fl">
@@ -306,33 +308,49 @@ $(id).eventCalendar({
 	</ul>
 	<div class="cb"></div>
 	<hr />
-	<p>
-		Special thanks to:
-	</p>
-	<ul>
-		<li>
-			<strong>Nerea Navarro</strong> <a href="http://twitter.com/#!/nereaestonta">@nereaestonta</a> - Translation & Testing
-		</li>
-		<li>
-			<strong>Juan Francisco del Río</strong> <a href="http://twitter.com/#!/juanriopacheco">@juanriopacheco</a> - Javascript Knowledge
-		</li>
-		<li>
-			<strong>Nuria Martin</strong> <a href="http://twitter.com/#!/nmartins">@nmartins</a> - Design
-		</li>
-		<li>
-			<strong>Luis Calvo</strong> <a href="http://twitter.com/#!/LuisCalvoDiaz">@LuisCalvoDiaz</a> - Testing
-		</li>
-		<li>
-			<strong>David Montalvo</strong> <a href="http://twitter.com/#!/davidmontalvo">@davidmontalvo</a> - Testing
-		</li>
-		
-	</ul>
-	
-	
+	<div class="fl">
+		<p>
+			Special thanks to:
+		</p>
+		<ul>
+			<li>
+				<strong>Nerea Navarro</strong> <a href="http://twitter.com/#!/nereaestonta">@nereaestonta</a> - Translation & Testing
+			</li>
+			<li>
+				<strong>Juan Francisco del Río</strong> <a href="http://twitter.com/#!/juanriopacheco">@juanriopacheco</a> - Javascript Knowledge
+			</li>
+			<li>
+				<strong>Nuria Martin</strong> <a href="http://twitter.com/#!/nmartins">@nmartins</a> - Design
+			</li>
+			<li>
+				<strong>Luis Calvo</strong> <a href="http://twitter.com/#!/LuisCalvoDiaz">@LuisCalvoDiaz</a> - Testing
+			</li>
+			<li>
+				<strong>David Montalvo</strong> <a href="http://twitter.com/#!/davidmontalvo">@davidmontalvo</a> - Testing
+			</li>
+		</ul>
+	</div>
+	<div id="license">
+		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">jQuery Event Calendar Plugin</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.vissit.com/jquery-event-calendar-plugin" property="cc:attributionName" rel="cc:attributionURL">Jaime Fernandez, Paradigma Tecnológico</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Reconocimiento-CompartirIgual 3.0 Unported License</a>.
+	</div>
+	<div class="cb"></div>
 </body>	
 
 <!--script src="js/jquery.timeago.js" type="text/javascript"></script-->
 <!--<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>-->
 <script src="js/jquery.eventCalendar.js" type="text/javascript"></script>
+
+<script type="text/javascript">//<![CDATA[
+	// Google Analytics for WordPress by Yoast v4.2.3 | http://yoast.com/wordpress/google-analytics/
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount','UA-12371131-1']);
+	_gaq.push(['_trackPageview']);
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
+//]]></script>
+
 
 </html>
