fluid version demo

--- a/index.html
+++ b/index.html
@@ -25,30 +25,26 @@
 <body id="responsiveDemo">
 	<div class="container" id="introPanel">	
 		<div class="row">
-			<div class="g12">				
-				<div class="pf pf_g250 clearfix">
-					<div class="pf_fix">
-						<img src="img/eventsCalendarIcon_250.png">
-					</div>
-					<div class="pf_fluid">
-						<h1 class="h3">
-							jQuery Event Calendar Demo Page
-						</h1>
-						<p>
-							jQuery plugin to show events in a calendar in a very confortable way
-						</p>
-						<p>
-							Main features:
-						</p>
-						<ul class="features disc">
-							<li><strong>Fluid Calendar</strong>: calendar will be shown with the width of its parent. Size is recalculated on window resize. So <strong>you can use it in your responsive designs</strong></li>
-							<li><strong>Change Style as you like</strong>: You can edit the .css file to restyle</li>
-							<li><strong>Light</strong>: Less than 8kb of Javascript(minified)</li>
-							<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can also use it with frameworks like Zepto.js</li>
-							<li><strong>Highly customizable</strong>: You can change almost everything. Look at the following examples</li>
-						</ul>
-					</div>
-				</div>
+			<div class="g4 ac">	
+				<img src="img/eventsCalendarIcon_250.png">
+			</div>
+			<div class="g8">
+				<h1 class="h3">
+					jQuery Event Calendar Demo Page
+				</h1>
+				<p>
+					jQuery plugin to show events in a calendar in a very confortable way
+				</p>
+				<p>
+					Main features:
+				</p>
+				<ul class="features disc">
+					<li><strong>Fluid Calendar</strong>: calendar will be shown with the width of its parent. Size is recalculated on window resize. So <strong>you can use it in your responsive designs</strong></li>
+					<li><strong>Change Style as you like</strong>: You can edit the .css file to restyle</li>
+					<li><strong>Light</strong>: Less than 8kb of Javascript(minified)</li>
+					<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can also use it with frameworks like Zepto.js</li>
+					<li><strong>Highly customizable</strong>: You can change almost everything. Look at the following examples</li>
+				</ul>
 			</div>
 		</div>
 	</div>
