--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@ $(id).eventCalendar({
 </body>
 
 <!--script src="js/jquery.timeago.js" type="text/javascript"></script-->
-<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>
-<!--<script src="js/jquery.eventCalendar.js" type="text/javascript"></script>-->
+<!--<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>-->
+<script src="js/jquery.eventCalendar.js" type="text/javascript"></script>
 
 
 
