Aligned text property naming with other properties

--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@ $(id).eventCalendar({
 						dayNames: [ 'Domingo','Lunes','Martes','Miércoles',
 							'Jueves','Viernes','Sabado' ],
 						dayNamesShort: [ 'Dom','Lun','Mar','Mie', 'Jue','Vie','Sab' ],
-						txt_noEvents: "No hay eventos para este periodo",
-						txt_SpecificEvents_prev: "",
-						txt_SpecificEvents_after: "eventos:",
-						txt_next: "siguiente",
-						txt_prev: "anterior",
-						txt_NextEvents: "Próximos eventos:",
-						txt_GoToEventUrl: "Ir al evento"
+						textNoEvents: "No hay eventos para este periodo",
+						textEventHeaderPrefix: "",
+						textEventHeaderSuffix: "eventos:",
+						textNext: "siguiente",
+						textPrevious: "anterior",
+						textNextEvents: "Próximos eventos:",
+						textGoToEventUrl: "Ir al evento"
 					});
 				});
 			</script>
