--- a/tests/calendarTests.html
+++ b/tests/calendarTests.html
@@ -10,6 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="qunit-1.11.0.js"></script>
   <script src="jquery-1.9.1.min.js"></script>
+  <script src="../lib/datejs/build/date-en-NZ.js"></script>
   <script src="../js/jquery.eventCalendar.js"></script>
   <script src="calendarTests.js"></script>
 </body>
